# tauri-android

./: Cargo.toml  index.html  style.scss
public/style/: tokens.css
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
