[package]
name = "andi-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
js-sys = "0.3.59"
leptos = { version = "0.1.1" }
leptos-material = { path = "../leptos-material" }
log = "0.4.17"
rgb = "0.8.34"
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"

[patch.crates-io]
leptos = { git = "https://github.com/ModProg/leptos", branch = "hgroup", version = "0.1.1" }

[workspace]
members = ["src-tauri"]
